Correct dropdown-item Z-index ~ User logout main menu will always be on top ~ PlaylistNav dropdown menu item will be above PlaylistShow but below PlaylistEditModal

--- a/app/assets/stylesheets/09-playlist-modal.scss
+++ b/app/assets/stylesheets/09-playlist-modal.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    z-index: 1;
+    z-index: 2;
     width: 100vw;
     height: 100vh;
 }
@@ -13,7 +13,7 @@
     position: fixed;
     top: calc(50% - 192px); // vertical midpoint minus half of the div height
     left: calc(50% - 238px); // horizontal midpoint minus half of the div width
-    z-index: 2;
+    z-index: 3;
     width: 475px;
     height: 385px;
     padding: 25px;
